--- a/style.css
+++ b/style.css
@@ -8,13 +8,38 @@ body {
 }
 
 header {
-padding: 350px 0;
-text-align: center;
+  color: black;
+  background: white;
+  padding: 20px 0;
+}
+
+.caixa {
+  position: relative;
+  width: 940px;
+  margin: 0 auto;
+}
+
+nav {
+  position: absolute;
+  top: 0px;
+  right: 0;
+}
+
+nav li {
+  display: inline;
+  margin: 0 0 0 15px;
+}
+
+nav a {
+  text-transform: uppercase;
+  color: black;
+  font-weight: bold;
+  font-size: 20px;
+  text-decoration: none;
 }
 
 h1 {
-  font-size: 50px;
-  opacity: 0; /* Inicialmente invisível */
+    opacity: 0; /* Inicialmente invisível */
     transform: translateY(-50px); /* Posição inicial acima */
     animation: titleEntrance 1s forwards; /* Animação de entrada */
   }
@@ -51,25 +76,6 @@ text-align: center;
 font-size: 18px;
 }
 
-main {
-  padding: 20px;
-}
-
-main ul {
-  list-style-type: none;
-  padding: 10px;
-}
-
-main li {
-  font-size: 18px;
-  border-bottom: 1px solid white;
-  padding: 40px;
-}
-
-main li:last-child {
-  border-bottom: 1px solid white;
-}
-
 blockquote {
 padding: 100px;
 }
@@ -78,10 +84,13 @@ footer {
   padding: 10px;
 }
 
-.cabecalho {
+.titulo-principal {
+  font-size: 30px;
   color: white;
   background-color: #8BC6EC;
   background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+  padding: 270px 0;
+  text-align: center;
   
 }
 
@@ -92,21 +101,12 @@ footer {
     animation: titleEntrance 1s forwards; /* Animação de entrada */
 }
 
-.destino {
-font-size: 20px;
-}
-
 .rodape {
   padding: 300px 0;
   text-align: center;
   background: rgb(50, 48, 96);
   color: white;
 }
-
-.topics {
-  font-size: 20px;
-  padding: 20px;
- }
 
  .depoimentos {
   font-size: 25px;
