--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ h2 {
 
 p {
   padding: 40px;
+  font-size: 20px;
 }
 
 main {
@@ -81,7 +82,7 @@ font-size: 18px;
 }
 
 blockquote {
-padding: 100px;
+padding: 30px;
 }
 
 footer {
@@ -95,7 +96,6 @@ footer {
   background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
   padding: 270px 0;
   text-align: center;
-  
 }
 
 .subtitulo {
@@ -128,13 +128,12 @@ font-size: 25px;
 text-align: right;
 }
 
-.parte-final {
-  padding: 80px;
-  font-size: 20px;
+.jogo {
+  text-align: center;
 }
 
 .rodape {
-  padding: 200px 0;
+  padding: 100px 0;
   text-align: center;
   background: rgb(50, 48, 96);
   color: white;
