--- a/prepare-se.css
+++ b/prepare-se.css
@@ -2,7 +2,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    color: white;
+    color: black;
     background: rgb(238, 174, 202);
     background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
   }
@@ -76,3 +76,19 @@ h1 {
     padding: 20px;
    }
   
+   .rodape {
+    padding: 100px 0;
+    text-align: center;
+    background: rgb(50, 48, 96);
+    color: white;
+  }
+  
+  .rodape img {
+    max-height: 40px; /* Ajuste a altura da imagem */
+  }
+  
+  .rodape .redes-sociais {
+    display: flex;
+    justify-content: center; /* Centralizar horizontalmente */
+    margin: 0 20px;
+  }
