--- a/prepare-se.css
+++ b/prepare-se.css
@@ -37,6 +37,12 @@ nav li {
     text-decoration: none;
   }
 
+  nav a:hover {
+    color: rgb(138, 59, 125);
+    text-decoration: underline;
+  }
+  
+
 h1 {
     opacity: 0; /* Inicialmente invisível */
     transform: translateY(-50px); /* Posição inicial acima */
@@ -51,7 +57,7 @@ h1 {
     }
   }
 
-  p {
+ main p {
     padding: 40px 0;
   }
 
@@ -76,7 +82,8 @@ h1 {
    }
   
    .rodape {
-    padding: 100px 0;
+    font-size: 18px;
+    padding: 40px 0;
     text-align: center;
     background: rgb(50, 48, 96);
     color: white;
@@ -90,4 +97,11 @@ h1 {
     display: flex;
     justify-content: center; /* Centralizar horizontalmente */
     margin: 0 20px;
+  }
+  
+  .copyright {
+    color: #FFFFFF;
+    font-size: 13px;
+    margin: 20px 0 0;
+    padding: 10px;
   }
