--- a/destinos.css
+++ b/destinos.css
@@ -58,7 +58,11 @@ h1 {
 
 h2 {
   text-align: center;
-  padding: 40px;
+  padding: 10px;
+}
+
+h3 {
+  text-align: center;
 }
 
 img {
@@ -101,7 +105,7 @@ main li:last-child {
 
 .destino {
     font-size: 20px;
-    padding: 30px;
+    padding: 20px;
 }
 
 .rodape {
