--- a/style.css
+++ b/style.css
@@ -1,172 +1,177 @@
 body {
-  font-family: 'Arial', sans-serif;
-  margin: 0;
-  padding: 0;
-  color: black;
-  background: white;
-}
-
-header {
-  color: black;
-  background: white;
-  padding: 20px 0;
-}
-
-.caixa {
-  position: relative;
-  width: 940px;
-  margin: 0 auto;
-}
-
-nav {
-  position: absolute;
-  top: 0px;
-  right: 0;
-}
-
-nav li {
-  display: inline;
-  margin: 0 0 0 15px;
-}
-
-nav a {
-  color: black;
-  font-weight: bold;
-  font-size: 20px;
-  text-decoration: none;
-}
-
-nav a:hover {
-  color: rgb(138, 59, 125);
-  text-decoration: underline;
-}
-
-h1 {
-    opacity: 0; /* Inicialmente invisível */
-    transform: translateY(-50px); /* Posição inicial acima */
-    animation: titleEntrance 1s forwards; /* Animação de entrada */
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    color: black;
+    background: white;
   }
-
-  /* Animação de entrada */
-  @keyframes titleEntrance {
-    to {
-      opacity: 1; /* Torna o título visível */
-      transform: translateY(0); /* Retorna à posição original */
+  
+  header {
+    color: black;
+    background: white;
+    padding: 20px 0;
+  }
+  
+  .caixa {
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
+  }
+  
+  nav {
+    position: absolute;
+    top: 0px;
+    right: 0;
+  }
+  
+  nav li {
+    display: inline;
+    margin: 0 0 0 15px;
+  }
+  
+  nav a {
+    color: black;
+    font-weight: bold;
+    font-size: 20px;
+    text-decoration: none;
+  }
+  
+  nav a:hover {
+    color: rgb(138, 59, 125);
+    text-decoration: underline;
+  }
+  
+  h1 {
+      opacity: 0; /* Inicialmente invisível */
+      transform: translateY(-50px); /* Posição inicial acima */
+      animation: titleEntrance 1s forwards; /* Animação de entrada */
     }
+  
+    /* Animação de entrada */
+    @keyframes titleEntrance {
+      to {
+        opacity: 1; /* Torna o título visível */
+        transform: translateY(0); /* Retorna à posição original */
+      }
+    }
+  
+  h2 {
+    text-align: center;
+    padding: 50px 0;
+    font-size: 30px;
+  }
+  
+  .titulo-principal {
+    font-size: 30px;
+    color: white;
+    background-color: #8BC6EC;
+    background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+    padding: 320px 0;
+    text-align: center;
+  }
+  
+  .subtitulo {
+   font-size: 18px;
+   opacity: 0; /* Inicialmente invisível */
+      transform: translateY(-50px); /* Posição inicial acima */
+      animation: titleEntrance 1s forwards; /* Animação de entrada */
+  }
+  
+  .botoes {
+    text-align: center;
   }
 
-h2 {
+  .botao {
+    font-size: 20px;
+    color: black;
+   background-color: #8EC5FC;
+   border-color:#8EC5FC;
+   border-radius: 10px;
+  }
+
+  main p {
+    font-size: 18px;
+    text-align: center;
+    padding: 5px;
+  }
+  
+  img {
+    max-width: 500px;
+    max-height: 450px;
+    margin: auto;
+    display: block;
+  }
+  
+  figcaption {
+  font: italic smaller sans-serif;
+  padding: 3px;
   text-align: center;
-  padding: 50px 0;
-  font-size: 30px;
-}
-
-.titulo-principal {
-  font-size: 30px;
-  color: white;
-  background-color: #8BC6EC;
-  background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
-  padding: 320px 0;
-  text-align: center;
-}
-
-.subtitulo {
- font-size: 18px;
- opacity: 0; /* Inicialmente invisível */
-    transform: translateY(-50px); /* Posição inicial acima */
-    animation: titleEntrance 1s forwards; /* Animação de entrada */
-}
-
-.botao {
-  font-size: 20px;
-  color: black;
- background-color: #8EC5FC;
- border-color:#8EC5FC;
- border-radius: 10px;
-}
-
-main p {
-  font-size: 20px;
-  text-align: center;
-}
-
-img {
-  max-width: 500px;
-  max-height: 450px;
-  margin: auto;
-  display: block;
-}
-
-figcaption {
-font: italic smaller sans-serif;
-padding: 3px;
-text-align: center;
-font-size: 18px;
-}
-
-blockquote {
-padding: 30px;
-}
-
-footer {
-  padding: 10px;
-}
-
- .depoimentos {
-  font-size: 25px;
-  color: white;
-  background: rgb(238, 174, 202);
-  background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
- }
-
-.content {
-  display: flex;
-  align-items: center; /* Alinhar verticalmente */
-  gap: 20px; /* Espaçamento entre texto e imagem */
-}
-
-.depoimento_img {
-  max-width: 500px;
-  max-height: 450px;
-  margin: auto;
-  display: block;
-}
-
-.name {
-font-size: 25px;
-text-align: right;
-}
-
-.jogo {
-  text-align: center;
-}
-
-.jogo p {
-  font-size: 20px;
-  padding: 20px;
-}
-
-.rodape {
   font-size: 18px;
-  padding: 40px 0;
-  text-align: center;
-  background: rgb(50, 48, 96);
-  color: white;
-}
-
-.rodape img {
-  max-height: 40px; /* Ajuste a altura da imagem */
-}
-
-.rodape .redes-sociais {
-  display: flex;
-  justify-content: center; /* Centralizar horizontalmente */
-  margin: 0 20px;
-}
-
-.copyright {
-  color: #FFFFFF;
-  font-size: 13px;
-  margin: 20px 0 0;
-  padding: 10px;
-}
+  }
+  
+  blockquote {
+  padding: 0px;
+  }
+  
+  footer {
+    padding: 10px;
+  }
+  
+   .depoimentos {
+    font-size: 18px;
+    color: white;
+    background: rgb(238, 174, 202);
+    background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
+   }
+  
+  .content {
+    display: flex;
+    align-items: center; /* Alinhar verticalmente */
+    gap: 20px; /* Espaçamento entre texto e imagem */
+  }
+  
+  .depoimento_img {
+    max-width: 500px;
+    max-height: 450px;
+    margin: auto;
+    display: block;
+  }
+  
+  .name {
+  font-size: 23px;
+  text-align: right;
+  }
+  
+  .jogo {
+    text-align: center;
+  }
+  
+  .jogo p {
+    font-size: 20px;
+    padding: 20px;
+  }
+  
+  .rodape {
+    font-size: 18px;
+    padding: 40px 0;
+    text-align: center;
+    background: rgb(50, 48, 96);
+    color: white;
+  }
+  
+  .rodape img {
+    max-height: 40px; /* Ajuste a altura da imagem */
+  }
+  
+  .rodape .redes-sociais {
+    display: flex;
+    justify-content: center; /* Centralizar horizontalmente */
+    margin: 0 20px;
+  }
+  
+  .copyright {
+    color: #FFFFFF;
+    font-size: 13px;
+    margin: 20px 0 0;
+    padding: 10px;
+  }
