--- a/style.css
+++ b/style.css
@@ -57,8 +57,8 @@ body {
   
   h2 {
     text-align: center;
-    padding: 30px 0;
-    font-size: 30px;
+    padding: 20px 0;
+    font-size: 32px;
   }
   
   .titulo-principal {
@@ -89,12 +89,55 @@ body {
    border-radius: 10px;
   }
 
+  .botao:hover {
+    background-color: #83b6e9;
+  }
+
   main p {
     font-size: 18px;
     text-align: center;
     padding: 0px;
   }
   
+  .depoimentos {
+    width: 60%;
+    margin: 0 auto;
+    text-align: center;
+    position: relative; /* Adicionado para posicionar as setas */
+  }
+
+  .depoimentos blockquote {
+    display: none;
+  }
+
+  .depoimentos blockquote.active {
+    display: block;
+  }
+
+  .carousel-controls {
+    font-size: 24px;
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: transform 0.3s, font-size 0.3s;
+  }
+  
+  .carousel-controls.left {
+    left: 10px;
+    font-size: 40px;
+  }
+  
+  .carousel-controls.right {
+    right: 10px;
+    font-size: 40px;
+  }
+
+  .carousel-controls:hover {
+    transform: translateY(-50%) scale(1.2); /* Ajuste o valor de escala conforme necessário */
+    font-size: 28px; /* Ajuste o tamanho da fonte conforme necessário */
+  }
+
   img {
     max-width: 500px;
     max-height: 450px;
@@ -110,7 +153,7 @@ body {
   }
   
   blockquote {
-  padding: 0px;
+  padding: 5px;
   }
   
   footer {
@@ -140,6 +183,7 @@ body {
   .name {
   font-size: 23px;
   text-align: right;
+  padding: 5px;
   }
   
   .jogo {
