--- a/style.css
+++ b/style.css
@@ -6,15 +6,6 @@ body {
     background: white;
   }
   
-  .container {
-    height: 200vh; /* Garante que há espaço para rolar */
-  }
-  
-  .content-efeito {
-    opacity: 0; /* Inicialmente, o conteúdo está invisível */
-    transition: opacity 1s ease; /* Adiciona uma transição suave */
-  }
-
   header {
     color: black;
     background: white;
@@ -182,7 +173,7 @@ body {
     color: white;
     background: rgb(238, 174, 202);
     background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
-   }
+  }
   
   .content {
     display: flex;
@@ -190,9 +181,9 @@ body {
     gap: 20px; /* Espaçamento entre texto e imagem */
   }
   
-  .depoimento_img {
-    max-width: 500px;
-    max-height: 450px;
+  .depoimentos_img {
+    max-width: 400px;
+    max-height: 350px;
     margin: auto;
     display: block;
   }
