Atualizando arquivos html e css

--- a/style.css
+++ b/style.css
@@ -193,6 +193,22 @@ body {
   text-align: right;
   padding: 5px;
   }
+
+  .objetivos {
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  
+  .objetivo-titulo {
+    text-align: left;
+    width: 100%;
+    font-size: 32px;
+  }
   
   .jogo {
     text-align: center;
