--- a/style.css
+++ b/style.css
@@ -81,12 +81,6 @@ h2 {
 
 .subtitulo {
   font-size: 18px;
-  opacity: 0;
-  /* Inicialmente invisível */
-  transform: translateY(-50px);
-  /* Posição inicial acima */
-  animation: titleEntrance 1s forwards;
-  /* Animação de entrada */
 }
 
 .botoes {
@@ -317,7 +311,7 @@ footer {
   width: 0;
 }
 
-.titulo {
+.titulo, .direita, .esquerda, .efeito-na-imagem1{
   visibility: hidden;
 }
 
@@ -391,6 +385,10 @@ footer {
   .jogo {
     width: 90%;
     padding: 20px;
+  }
+
+  .jogo p {
+    font-size: 18px;
   }
 
 }
