--- a/destinos.css
+++ b/destinos.css
@@ -1,134 +1,143 @@
 body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    color: black;
-    background: rgb(238, 174, 202);
-    background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  color: black;
+  background: rgb(238, 174, 202);
+  background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
 }
-  
+
+.container {
+height: 200vh; /* Garante que há espaço para rolar */
+}
+
+.content {
+opacity: 0; /* Inicialmente, o conteúdo está invisível */
+transition: opacity 1s ease; /* Adiciona uma transição suave */
+}
+
 header {
-    color: black;
-    background-color: white;
-    padding: 20px 0;
+  color: black;
+  background-color: white;
+  padding: 20px 0;
 }
 
 .caixa {
-    position: relative;
-    width: 940px;
-    margin: 0 auto;
-  }
+  position: relative;
+  width: 940px;
+  margin: 0 auto;
+}
 
 nav {
-    position: absolute;
-    top: 0px;
-    right: 0;
+  position: absolute;
+  top: 0px;
+  right: 0;
 }
 
 nav li {
-    display: inline;
-    margin: 0 0 0 15px;
+  display: inline;
+  margin: 0 0 0 15px;
 }
-  
+
 nav a {
-    color: black;
-    font-weight: bold;
-    font-size: 20px;
-    text-decoration: none;
+  color: black;
+  font-weight: bold;
+  font-size: 20px;
+  text-decoration: none;
 }
 
 nav a:hover {
-  color: rgb(138, 59, 125);
-  text-decoration: underline;
+color: rgb(138, 59, 125);
+text-decoration: underline;
 }
 
 h1 {
-    opacity: 0; /* Inicialmente invisível */
-    transform: translateY(-50px); /* Posição inicial acima */
-    animation: titleEntrance 1s forwards; /* Animação de entrada */
+  opacity: 0; /* Inicialmente invisível */
+  transform: translateY(-50px); /* Posição inicial acima */
+  animation: titleEntrance 1s forwards; /* Animação de entrada */
 }
 
-  /* Animação de entrada */
-  @keyframes titleEntrance {
-    to {
-      opacity: 1; /* Torna o título visível */
-      transform: translateY(0); /* Retorna à posição original */
-    }
+/* Animação de entrada */
+@keyframes titleEntrance {
+  to {
+    opacity: 1; /* Torna o título visível */
+    transform: translateY(0); /* Retorna à posição original */
+  }
 }
 
 h2 {
-  text-align: center;
-  padding: 10px;
+text-align: center;
+padding: 10px;
 }
 
 h3 {
-  text-align: center;
+text-align: center;
 }
 
 img {
-    max-width: 500px;
-    max-height: 450px;
-    margin: auto;
-    display: block;
+  max-width: 500px;
+  max-height: 450px;
+  margin: auto;
+  display: block;
 }
 
-  figcaption {
-    font: italic smaller sans-serif;
-    padding: 3px;
-    text-align: center;
-    font-size: 18px;
+figcaption {
+  font: italic smaller sans-serif;
+  padding: 3px;
+  text-align: center;
+  font-size: 18px;
 }
 
-  p {
-    padding: 40px 0;
-    font-size: 18px;
+p {
+  padding: 40px 0;
+  font-size: 18px;
 }
 
 main p {
-  padding: 40px 0;
+padding: 40px 0;
 }
 
 main ul {
-  list-style-type: none;
-  padding: 10px;
+list-style-type: none;
+padding: 10px;
 }
 
 main li {
-  font-size: 18px;
-  border-bottom: 1px solid white;
-  padding: 40px;
+font-size: 18px;
+border-bottom: 1px solid white;
+padding: 40px;
 }
 
 main li:last-child {
-  border-bottom: 1px solid white;
+border-bottom: 1px solid white;
 }
 
 .destino {
-    font-size: 20px;
-    padding: 20px;
+  font-size: 20px;
+  padding: 20px;
 }
 
 .rodape {
-  font-size: 18px;
-  padding: 40px 0;
-  text-align: center;
-  background: rgb(50, 48, 96);
-  color: white;
+font-size: 18px;
+padding: 40px 0;
+text-align: center;
+background: rgb(50, 48, 96);
+color: white;
 }
 
 .rodape img {
-  max-height: 40px; /* Ajuste a altura da imagem */
+max-height: 40px; /* Ajuste a altura da imagem */
 }
 
 .rodape .redes-sociais {
-  display: flex;
-  justify-content: center; /* Centralizar horizontalmente */
-  margin: 0 20px;
+display: flex;
+justify-content: center; /* Centralizar horizontalmente */
+margin: 0 20px;
 }
 
 .copyright {
-  color: #FFFFFF;
-  font-size: 13px;
-  margin: 20px 0 0;
-  padding: 10px;
+color: #FFFFFF;
+font-size: 13px;
+margin: 20px 0 0;
+padding: 10px;
 }
